<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>Blynk Server</name>
    <url>https://www.blynk.cc/</url>
    <description>
        Blynk - platform with iOs and Android apps to control Arduino,
        Raspberry Pi and similar micro-controllers boards over Internet.
    </description>
    <organization>
        <name>Blynk Inc.</name>
        <url>https://www.blynk.cc/</url>
    </organization>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/blynkkk/blynk-server/issues</url>
    </issueManagement>

    <groupId>cc.blynk</groupId>
    <artifactId>blynk</artifactId>
    <version>0.39.10-SNAPSHOT</version>
    <packaging>pom</packaging>

    <scm>
        <url>https://github.com/blynkkk/blynk-server.git</url>
        <connection>scm:git:ssh://git@github.com/blynkkk/blynk-server.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/blynkkk/blynk-server.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <id>Dmitriy Dumanskiy</id>
            <email>dmitriy@blynk.cc</email>
        </developer>
    </developers>

    <modules>
        <module>server</module>
        <module>client</module>
        <module>integration-tests</module>
    </modules>

    <!-- for QR gen tool -->
    <distributionManagement>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
            <layout>default</layout>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <properties>
                <script.extension>.bat</script.extension>
                <!--Just to enable build under windows. EPOLL CODE SHOULD NOT BE USED UNDER WINDOWS-->
                <epoll.os>linux-x86_64</epoll.os>
            </properties>
        </profile>

        <profile>
            <id>unix</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <script.extension>.sh</script.extension>
                <epoll.os>linux-x86_64</epoll.os>
            </properties>
        </profile>

    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                    <release>10</release>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>6.1.1</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                    <excludes>**/module-info.java</excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>*.sql</exclude>
                    <exclude>*.temp</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

    <properties>
        <!-- maven plugins -->
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
        <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>

        <!-- dependencies -->
        <netty.version>4.1.30.Final</netty.version>
        <netty.boring.ssl.version>2.0.15.Final</netty.boring.ssl.version>
        <log4j2.version>2.11.1</log4j2.version>
        <jackson-databind.version>2.9.6</jackson-databind.version>
        <disruptor.version>3.4.2</disruptor.version>
        <async-http-client.version>2.5.3</async-http-client.version>
        <postgresql.version>42.2.5</postgresql.version>
        <HikariCP.version>3.2.0</HikariCP.version>
        <qrgen.version>2.2.0</qrgen.version>
        <bcpg-jdk15on.version>1.60</bcpg-jdk15on.version>
        <acme4j-client.version>2.3</acme4j-client.version>
        <javax.mail.version>1.6.1</javax.mail.version>
        <javax.activation.version>1.2.0</javax.activation.version>
        <jooq.version>3.10.8</jooq.version>

        <!-- test dependencies -->
        <httpclient.version>4.5.2</httpclient.version>
        <commons-lang3.version>3.4</commons-lang3.version>
        <junit.version>4.12</junit.version>
        <mockito-core.version>2.18.3</mockito-core.version>
        <commons-io.version>2.5</commons-io.version>
        <commons-lang.version>3.7</commons-lang.version>
        <jmh-core.version>1.19</jmh-core.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- For Let's Encrypt certificates generation -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpg-jdk15on</artifactId>
            <version>${bcpg-jdk15on.version}</version>
        </dependency>

        <!-- Log4j2 dependencies -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>


</project>